# case-cointop

./: .env.example  .gitignore  README.md  manage.py  pyproject.toml
admin_cointop/: asgi.py  middleware.py  models.py  settings.py  urls.py  wsgi.py
admin_cointop/static/css/: styles.css
cointop/: apps.py  coinapi.py  coinapi_validation.py  cronjobs.py  forms.py  models.py  urls.py  views.py
cointop/migrations/: 0001_initial.py  0002_alter_alert_asset_alter_alert_user.py  0003_alter_alert_asset.py
templates/: base.html
templates/cointop/: home.html
templates/components/: nav.html  sidenav.html
templates/registration/: login.html
